data/derived/comb/progs/unify/prog5732.ml.out
Characters 80-92:
  | Sine(e1) -> sin (1.0000)
                ^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         string
